--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 nav{
     width: 100%;
-    background: #0c0b0b;
+    /* background: #0c0b0b; */
     color: #fff;
     padding: 4px 0;
     position: fixed;
