--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -32,7 +32,7 @@ nav ul li {
   cursor: pointer;
   color: #fff;       
   font-size: 28px;   
-  z-index: 200;      
+  z-index: 300;      
 }
 
 .hamburger span {
@@ -118,4 +118,20 @@ nav ul li a:hover {
 
 nav ul li a:hover::after {
   width: 100%; 
+}
+
+.menu-overlay {
+  position: fixed;
+  inset: 0;
+  backdrop-filter: blur(4px);   
+  background: rgba(0, 0, 0, 0.2); 
+  -webkit-backdrop-filter: blur(4px);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  z-index: 50; 
+}
+.menu-overlay.active {
+  opacity: 1;
+  pointer-events: auto;
 }
