Update: change subtitle size for mobile interface

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -34,7 +34,7 @@
 }
 
 .logo-subtitle {
-  font-size: 36px;
+  font-size: 37px;
   font-weight: 700;
   letter-spacing: 2px;
   margin-bottom: 30px;
@@ -121,6 +121,9 @@
 @media (max-width: 768px) {
   .logo-title {
     font-size: 48px;
+  }
+  .logo-subtitle {
+    font-size: 31px;
   }
 
   .hero-text h2 {
