--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -15,30 +15,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 14px 8%;
-  background: rgba(96, 184, 255, 0.08);
+  padding: 12px 8%;
+  background: rgba(96, 183, 255, 0.026);
   border-bottom: 1px solid rgba(255, 255, 255, 0.08);
 }
 
 .footer-top span {
-  font-size: 14px;
+  font-size: 19px;
 }
 
-.social-icons a {
-  margin-left: 14px;
-  text-decoration: none;
-  color: #60b8ff;
-  font-size: 14px;
-}
-
-.social-icons a:hover {
-  color: #9ad5ff;
-}
 
 /* Main content */
 .footer-content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 40px;
   padding: 50px 8%;
 }
@@ -47,6 +37,17 @@
   color: #60b8ff;
   margin-bottom: 14px;
   font-size: 16px;
+}
+.social-icons a {
+  margin-left: 24px;
+  text-decoration: none;
+  color: #60b8ff;
+  font-size: 30px;       
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #edeeee;
 }
 
 .footer-column p {
@@ -76,4 +77,30 @@
   font-size: 13px;
   background: rgba(0, 0, 0, 0.4);
   color: #aab4c3;
+}
+
+/* Mobile layout */
+@media (max-width: 600px) {
+  .footer-top {
+    flex-direction: column;   
+    align-items: center;      
+    text-align: center;
+    padding: 12px 5%;
+  }
+
+  .footer-top span {
+    margin-bottom: 18px;      
+    font-size: 14px;          
+  }
+
+  .social-icons {
+    display: flex;            
+    gap: 24px;               
+    justify-content: center;  
+  }
+
+  .social-icons a {
+    margin-left: 0;           
+    font-size: 24px;          
+  }
 }
